apps/stirling-pdf/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
