apps/stirling-pdf/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  labels:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/instance: stirling-pdf
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/instance: stirling-pdf
